--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,5 +16,5 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      - run: pip install mkdocs mkdocs-material pymdown-extensions
+      - run: pip install mkdocs mkdocs-material pymdown-extensions mkdocs-mermaid2-plugin
       - run: mkdocs gh-deploy --force
