--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,16 @@ theme:
         name: Switch to light mode
 plugins:
   - search
+  - mermaid2:
+      arguments:
+        theme: default
+        themeVariables:
+          primaryColor: '#1976d2'
+          primaryTextColor: '#ffffff'
+          primaryBorderColor: '#1976d2'
+          lineColor: '#1976d2'
+          secondaryColor: '#f5f5f5'
+          tertiaryColor: '#ffffff'
 markdown_extensions:
   - toc:
       permalink: true
@@ -51,12 +61,6 @@ markdown_extensions:
       generic: true
   - footnotes
   - tables
-
-extra_javascript:
-  - https://unpkg.com/mermaid@10.6.1/dist/mermaid.min.js
-
-extra_css:
-  - https://unpkg.com/mermaid@10.6.1/dist/mermaid.min.css
 
 repo_url: https://github.com/InSilicoVida-Research-Lab/pbpko/
 site_url: https://insilicovida-research-lab.github.io/pbpko/
